--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/sub_title_layout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,6 +59,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/author_layout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -81,6 +83,7 @@
                 android:entries="@array/type" />
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/image_url_layout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -95,6 +98,8 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/image_frame"
+                android:visibility="gone"
                 app:cardElevation="0dp"
                 android:layout_marginBottom="8dp"
                 android:layout_width="match_parent"
@@ -103,6 +108,7 @@
                 app:cardCornerRadius="16dp">
 
                 <ImageView
+                    android:src="@color/colorAccent"
                     android:id="@+id/image_preview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
